# stoca

./: .env.local.example  .gitignore  CI_CD.md  Makefile  Procfile.dev  README.md  next.config.ts  package-lock.json  package.json  prisma.config.ts
.github/workflows/: ci.yml
ai-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
ai-service/app/: config.py  database.py  main.py
ai-service/app/enrichment/: product_enricher.py
ai-service/app/middleware/: auth.py
ai-service/app/models/: chat.py  enrichment.py  search.py  vision.py
ai-service/app/routers/: enrichment.py  search.py  tool_models.py  tool_utils.py  tools.py
ai-service/app/routers/tool_modules/: analytics.py  enrichment.py  orders.py  products.py  promotions.py  store.py  vision.py
ai-service/app/search/: embeddings.py  semantic_search.py
ai-service/app/vision/: inventory_scanner.py  product_matcher.py
app/: globals.css  layout.tsx  not-found.tsx
app/(auth)/: layout.tsx  loading.tsx
app/(auth)/login/: page.tsx
app/(customer)/: layout.tsx
app/(public)/: error.tsx  layout.tsx  page.tsx
app/dashboard/: DashboardContent.tsx  DashboardContext.tsx  DashboardShell.tsx  error.tsx  layout.tsx  loading.tsx  page.tsx
app/lib/: images.ts  posthog.tsx  prisma.ts  rate-limit.ts  utils.ts
app/onboarding/: error.tsx  loading.tsx  page.tsx
app/types/: database.ts  index.ts
docs/: API.md  ARCHITECTURE.md  COMPONENTS.md
prisma/: schema.prisma  seed.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 001_initial.sql  002_store_media_bucket.sql
(+45 files in other folders)
